# ProsNet

./: .gitignore  MeetingNotes.md  Pipfile  bash_setup.sh  example_4_engineering_set.npy  example_4_engineering_set_classes.npy  gcp_setup.sh  readme.md  requirements.txt  setup.cfg  setup.py
class/: __main__.py  deep_model.py  engineering_set.py
classify/: dataset.py  engineering_set.py  epoch_stack.py  example_1.py  example_2.py  example_3.py  example_4.py  example_5.py  feature_set.py  helper.py  model_abc.py  non_wear_processing.py  non_wear_processing_project.py  process.py  shallow_paper_data_analysis.py  shallow_paper_data_processing.py  shallow_paper_data_processing_working.py  shallow_paper_feature_selection.py  shallow_paper_plots.py  shallow_paper_processing.py  testing_R_Broadley_module.py
classify/activity_monitor/: activpal.py
classify/dataset/: dataset.py  dataset_abc.py  engineering_set.py  feature_set.py
classify/model/: deep_model.py  model.py  shallow_model.py
classify/stack/: epoch_stack.py  non_wear_stack.py
examples/: crop_test.py  setup_example.py
examples/deep_examples/: example_1.py  (+2 more)
notebooks/: amputee_posture_classification_experiments.ipynb  amputee_posture_classification_experiments_mlm.ipynb  amputee_posture_classification_experiments_shallow.ipynb  amputee_posture_classification_model_dev.ipynb
posture_classification/: __main__.py  activity_monitor_abc.py  activpal.py  algorithm_dataset_abc.py  deep_model.py  engineering_set.py  epoch_stack.py  posture_stack_abc.py
processing/: plotter.py  shallow_paper_data_analysis.py
(+21 files in other folders)
