[metadata]
name = ProsNet
version = 0.0.3
author = Benjamin Griffiths
author_email = drjamin1990@gmail.com
description = A package for processing activPAL activity monitor data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ben-Jamin-Griff/ProsNet
project_urls =
    Bug Tracker = https://github.com/Ben-Jamin-Griff/ProsNet/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src